Fix mobile list marker position: use inside to prevent overflow past heading

--- a/templates/shared/web.css
+++ b/templates/shared/web.css
@@ -612,7 +612,7 @@ body[class*="template-"] .base-heading-link svg {
 
     body[class*="template-"] ul,
     body[class*="template-"] ol {
-        padding-left: 1.4rem;
+        padding-left: 1rem;\n        list-style-position: inside;
     }
 
     body[class*="template-"] .base-doc-sitename {
